--- a/getting-started/decision-microservice.adoc
+++ b/getting-started/decision-microservice.adoc
@@ -45,12 +45,12 @@ https://raw.githubusercontent.com/timwuthenow/dmn-workshop-labs/master/policy-pr
 +
 image::github-import.png[Import DMN]
 
-. When the project is imported, you will see the DMN Editor with the **insurance-pricing** DMN model displayed. If you instead of pointing to a particular DMN, pointed to an entire project, any DMN/BPMN models associated with it would be able to viewed/edited within {CANVAS}.
+. Once the project is imported, you will see the DMN Editor with the **insurance-pricing** DMN model displayed. If, instead of pointing to a particular DMN, you pointed to an entire project, any DMN/BPMN models associated with it would be able to be viewed/edited within {CANVAS}.
 +
 image::insurance-pricing-dmn.png[Sandbox Model]
 
 . You can then click the **Run** button to get this DMN running within the browser session itself. 
-
++
 [NOTE]
 ====
 If you're not connected to Extended Services, a modal will open showing how to setup it in your local enviroment.
