NO-ISSUE: Replacing reference to personal account with bamoe repo

--- a/getting-started/decision-microservice.adoc
+++ b/getting-started/decision-microservice.adoc
@@ -16,7 +16,7 @@ Instructions for both can be found within this documentation, links on the left.
 
 == Examine the Existing DMN Diagram
 
-The following example describes an *insurance* price calculator based on an applicant's age and accident history. You can check the DMN model at https://github.com/timwuthenow/dmn-workshop-labs/blob/master/policy-price/insurance-pricing.dmn[GitHub].
+The following example describes an *insurance* price calculator based on an applicant's age and accident history. You can check the DMN model at https://github.com/bamoe/bamoe-docs-source-code-examples/tree/9.1.x/dmn/insurance-pricing.dmn[GitHub].
 
 This example consists of a simple DMN model, which is represented by the following diagram:
 
@@ -38,7 +38,7 @@ In this section, you will import the GitHub repository to {CANVAS} directly.
 . Under **Import </> From URL** copy and paste the following link and click **Import**:
 +
 ----
-https://raw.githubusercontent.com/timwuthenow/dmn-workshop-labs/master/policy-price/insurance-pricing.dmn
+https://raw.githubusercontent.com/bamoe/bamoe-docs-source-code-examples/9.1.x/dmn/insurance-pricing.dmn
 ----
 
 +
